<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="action_change_color">Change Color</string>
    <string name="action_change_view">Change View</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_rate">Rate</string>
    <string name="action_recommend">Recommend your friends</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done</string>
    <string name="edited">Edited</string>
    <string name="enter_blanks">Please do not leave blank spaces</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="new_record">New</string>
    <string name="no_items_found">Nothing found</string>
    <string name="presets">Presets</string>
    <string name="recommend_text">I suggest you use this awesome app: https://play.google.com/store/apps/details?id=com.bitlink.pomodoro</string>
    <string name="saved">Saved</string>
    <string name="select_color">Select Color:</string>
    <string name="overflow_menu" translatable="false">Overflow Menu</string>
    <string name="action_set_notification">Set an alarm</string>

    <array name="rainbow">
        <item>@color/red</item>
        <item>@color/pink</item>
        <item>@color/purple</item>
        <item>@color/deep_purple</item>
        <item>@color/indigo</item>
        <item>@color/blue</item>
        <item>@color/light_blue</item>
        <item>@color/cyan</item>
        <item>@color/teal</item>
        <item>@color/green</item>
        <item>@color/light_green</item>
        <item>@color/lime</item>
        <item>@color/yellow</item>
        <item>@color/amber</item>
        <item>@color/orange</item>
        <item>@color/deep_orange</item>
        <item>@color/brown</item>
        <item>@color/grey</item>
        <item>@color/blue_gray</item>
    </array>

    <array name="circle_progress_color">
        <item>@color/circle_progress_color</item>
    </array>

    <string name="task_name">Task Name</string>
    <string name="work_session_duration">Work session duration</string>
    <string name="break_duration">Break duration</string>
    <string name="long_break_duration">Long break duration</string>
    <string name="total_work_session">Work sessions before a long break</string>
    <string name="session">session</string>
    <string name="break_time">Break Time</string>
    <string name="work_time">Work Time: %1$s</string>
    <string name="break_time_for_notify">Break Time: %1$s</string>
    <string name="work_session_completed">Work session is completed: %1$s</string>
    <string name="save_timer">Save the timer</string>
    <string name="want_to_save_changes">Do you want to save changes?</string>
    <string name="action_other_apps">Our other applications</string>
    <string name="minutes">minutes</string>
    <string name="sessions">sessions</string>
    <string name="minute">minute</string>

</resources>
