<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/action_change_view"
        android:icon="@mipmap/ic_view_stream"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_change_view"
        app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_other_apps"
        android:orderInCategory="100"
        android:title="@string/action_other_apps" />

    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="100"
        android:title="@string/action_recommend" />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate" />
<!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />-->
</menu>
